# deferredRendererInOneWeekend

./: .gitignore  CMakeLists.txt  README.md  build.sh
shaders/: decal.fs  deferredBasePass.fs  deferredBasePass.vs  lightingTest.fs  lightingTest.vs  pointLights.fs  shadowDepth.fs  shadowDepth.vs  spotLight.fs
src/: main.cpp
src/primitives/: Cube.h  Plane.h  Primitive.cpp  Primitive.h  ScreenQuad.h  Sphere.h
src/renderer/: Camera.cpp  Camera.h  Decal.cpp  Decal.h  DecalFBO.cpp  DecalFBO.h  DeferredRendererFBO.cpp  DeferredRendererFBO.h  Light.cpp  Light.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShadowMapFBO.cpp  ShadowMapFBO.h  Texture.cpp  Texture.h
src/ui/: appWindow.cpp  appWindow.h  appWindow.ui  openGLWidget.cpp  openGLWidget.h
